syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message baseSync_toS {}

message baseSync_toC {
    optional string userID = 1;
    optional uint64 gameID = 2;
    optional string name   = 3;
    optional string Signature  = 4;  // 签名
    repeated int32 characterList = 5;
    optional string  Birthday  = 6;
    optional int32   Portrait = 7;
    optional int32   PortraitFrame = 8; //头像框
    optional int32   Card = 9; // 名片
    optional int32   Sex  = 10; // 性别 0男1女
}